# gfx

./: CMakeLists.txt  README.md  compile.sh
docs/: json_configuration.md  render_config.md  render_device.md  usage.md
examples/: CMakeLists.txt  common.cpp  common.hpp  compile.sh  example_renderer_config.json  input_attachment.cpp  input_attachment_config.json  mul_vbs.cpp  mul_vbs.json  pong.cpp  pong_config.json  render_from_texture.cpp  render_from_texture_config.json  renderer_rewrite.cpp  resize.cpp  resize_config.json  simple.cpp  variable_vertex_buffers.cpp
examples/imgui/: CMakeLists.txt  imgui_gfx_config.json  main.cpp  my_imgui_config.hpp
examples/input_attachment/: CMakeLists.txt  input_attachment.cpp  input_attachment_config.json
examples/multiple_vertex_buffers/: CMakeLists.txt  mul_vbs.cpp  mul_vbs.json
examples/pong/: CMakeLists.txt  pong.cpp  pong_config.json
examples/render_from_texture/: CMakeLists.txt  render_from_texture.cpp  render_from_texture_config.json
examples/resize/: CMakeLists.txt  resize.cpp
examples/shaders/: imgui.frag  imgui.vert  pos_uv_texture.vert  shader.frag  shader.vert  simple.frag  square.vert  uv_input_attachment.frag  uv_texture.frag  vb.vert
examples/static_dynamic_vertices/: CMakeLists.txt  example_renderer_config.json  variable_vertex_buffers.cpp
include/gfx/: gfx_helper.hpp  render_config.hpp  render_device.hpp  renderer.hpp
tests/: CMakeLists.txt  renderpass_tests.cpp  test_main.cpp
